<resources>
    <string name="app_name">EnforcmemntApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="login_to_continue">Login To Continue</string>
    <string name="select_street">select Street</string>
    <string name="street">Street</string>
    <string name="username_or_email">UserName or Email</string>
    <string name="password">Password</string>
    <string name="username">userName</string>
    <string name="login">LOGIN</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="something_went_wrong">Something Went Wrong</string>
    <string name="query_by_receipt_number">QUERY BY RECEIPT NUMBER</string>
    <string name="enter_the_receipt_number_below">Enter the receipt number below</string>
    <string name="receiptnumber">Receipt Number</string>
    <string name="search">SEARCH</string>
    <string name="enforcement">Enforcement</string>
    <string name="county">County</string>
    <string name="not_found_receipt" type="id">This receipt number not found</string>
    <string name="query_by_business_id">QUERY BY BUSINESS ID</string>
    <string name="enter_business_number_below">Enter Business Number Below</string>
    <string name="business_number">Business Number</string>
    <string name="business_certificate_details">Business Certificate Details</string>
    <string name="business_name">Business Name</string>
    <string name="owner">Owner</string>
    <string name="activity_code"><![CDATA[Business Activity Code & Description]]></string>
    <string name="detailed_desc">Detailed Activity Description</string>
    <string name="start_date">Start Date</string>
    <string name="pobox">PO BOX</string>
    <string name="KRAPIN">kra pin</string>
    <string name="physical_address">Physical address</string>
    <string name="end_date">End Date</string>
    <string name="amount">Amount</string>
    <string name="plotnumber">PlotNumber</string>
    <string name="certificate_status">Certificate Status</string>
    <string name="valid">VALID</string>
    <string name="check_business_validity">check Business Validity</string>
    <string name="query_vehicle">Query Cess Vehicle By Plate Number</string>
    <string name="query_packing">Query Parking By Plate Number</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="no_streets">No Streets Found</string>
    <string name="query_by_plate_Number">Query Parking By Plate Number</string>
    <string name="plate_n">Plate Number</string>
    <string name="enter_number_plate">Enter Number Plate Below</string>
    <string name="parking_details">Parking Details</string>
    <string name="parking_duration">parking Duration</string>
    <string name="vehicle_category">Vehicle Category</string>
    <string name="parking_fee">parking fee</string>
    <string name="parking_penalty">parking penalty</string>
</resources>