<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parking"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.ParkingFragment">


    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/parking_details"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.19"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14sp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="14sp"
        android:hint="@string/business_number"
        android:textSize="14sp"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/plate_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14sp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="14sp"
        android:hint="@string/parking_duration"
        android:textSize="14sp"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textField1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/parking_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14sp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="14sp"
        android:hint="@string/vehicle_category"
        android:textSize="14sp"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textField2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/v_cate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14sp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="14sp"
        android:hint="@string/start_date"
        android:textSize="14sp"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textField3">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/start_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14sp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="14sp"
        android:hint="@string/end_date"
        android:textSize="14sp"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textField4">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/end_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14sp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="14sp"
        android:hint="@string/amount"
        android:textSize="14sp"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textField5">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14sp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="14sp"
        android:hint="@string/parking_fee"
        android:textSize="14sp"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textField6">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_prk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14sp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="14sp"
        android:hint="@string/parking_penalty"
        android:textSize="14sp"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textField7">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_penalty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="14sp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="14sp"
        android:hint="Payment Date"
        android:textSize="14sp"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textField8">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_pay_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>